# sdaq

./: .gitignore  CMakeLists.txt  FDC_CONFIG.cfg  README.md  toolchain.arm.cmake  version.h.in
board/: CMakeLists.txt
board/inc/: feature.h  getData.h
board/src/: feature.cpp  getData.cpp
inc/: INIReader.h  ServerSocket.h  Socket.h  SocketException.h  adcconfig.h  base.h  config.h  core.h  debug.h  dsp.h  error.h  event.h  iotBox.h  ipsetup.h  log.h  msg.h  object.h  output.h  resource.h  runnable.h  sensor.h  server.h  signal512.h  stdafx.h  struct.h  taskMgr.h  thread.h  timerMgr.h  utils.h
src/: ServerSocket.cpp  Socket.cpp  adcconfig.cpp  config.cpp  core.cpp  dsp.cpp  iotBox.cpp  ipsetup.cpp  log.cpp  main.cpp  msg.cpp  output.cpp  sensor.cpp  server.cpp  taskMgr.cpp  thread.cpp  timerMgr.cpp  utils.cpp
